syntax = "proto3";

package inhumate.rti.proto;
option csharp_namespace = "Inhumate.RTI.Proto";
import "google/protobuf/empty.proto";
import "Parameter.proto";

message Commands {
    oneof which {
        google.protobuf.Empty request_commands = 1;
        Command command = 2;
        ExecuteCommand execute = 3;
        CommandResponse response = 4;
    }
}

message Command {
    string name = 1;
    string description = 2;
    repeated Parameter arguments = 3;
}

message ExecuteCommand {
    string transaction_id = 1; // if set, a subsequent response is expected
    string name = 2;
    map<string, string> arguments = 3;
}

message CommandResponse {
    string transaction_id = 1;
    bool failed = 2;
    string message = 3;
    map<string, string> return_values = 4;
}
