// EntityDomain - Answers the question: Where is this entity expected to reside/operate?

syntax = "proto3";

package inhumate.rti.proto;
option csharp_namespace = "Inhumate.RTI.Proto";

enum EntityDomain {
    UNKNOWN_DOMAIN = 0;
    OTHER_DOMAIN = 1;
    LAND = 2;
    SEA = 3;
    AIR = 4;
    SPACE = 5;
    SUBSURFACE = 6;
    SPECIAL = 7;
    CYBER = 8;
}
